[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.007, 52.1212 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 455.377, 412.95 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="bulletCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="invulnCooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="hit" from="." to="." method="_on_Player_hit"]
[connection signal="timeout" from="invulnCooldown" to="." method="_on_invulnCooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
